--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -5,6 +5,13 @@
         margin-right: auto 
 }
 
+.header
+{    
+        display: block;
+        margin-left: auto;
+        margin-right: auto 
+}
+
 h4 
 {
         text-align: center;
